lab1/Test/L1-A-11-74.cmm
struct bQMDdRTXOx {
};
struct TpOls ;
int ro0C4MQ8y0S7x 
;
int _YJDT_fR ( struct {
  int uSRBOa ;
}qv9xYfPgP int ) {
  float gcxeZl6RCw , B [ 1661506649 ] = Y = hq5uW 
    || v560UbCHW32jLEcryL9t == ViZX - Ayis9Jop * ! - bvS6E4pNBfVX 
    ( , g_ZvoaM2XpT_5x_ && Ilsv8pNSQS9gOE2mVvI9 < hCt7KRuNhUx 
    / sYP [ yM && c [ DJQag = fX1oEyLub7K2I38H6 >= BqdJzBX 
    + CpSOe6u57 * ! ( Z2Y7 = VFW9Z_qeEu_dKMQ826zS != DkzWzShwTuaczj 
    / ehmh0Tk ( cxKrROS , Xoxa7P52CoLTu = v_dBC4d3y173rJIZiD 
    && MFzC4DU <= SLsoMKp8jaassQaotHKK + ( RMAsDhtLZR1mjv 
    = AP7J2uM79q0uFoRmR8RG > c1k6bQ5I2v6Nd_k3Bj ) + p7KLpKu1vfZ1ug 
    . zNW ) / 487915725.1171018084 ) ] * - O4fpd8RPyCN 
    ( ) + 441927398 ] . mmE9g6TP33YF ) ;
}
int oWNNyoE7DilPgFeZ62 , m8 

;
int sA4fZ ( ) {
  XCCvn_9g44El ;
  FN1RXjA3iDd8RGpE ;
  if ( uSh )   jPHA ;
else {
    ZJ ;
    Lw ;
    _GnET7gxUS ;
    while ( nASbcOrflHbHvD6_DEA )     bi46yt29Mdd4MQ8wl7vE 
      ( ;

    if ( _U66 Mmrd0nclc )     return erdX ;float 
else     if ( oHzuyN8O1JOdb2B )     SOeyC0pclbZJVQmB12 
      ;


  }
 }
int ;
int G14e ( int JC7U8NF , int blqz_uUpnzqo6 ) }
